--- a/app/src/main/res/layout/item_actor_cast_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_actor_cast_movie_recycler_view.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/background_dark">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/castMovieTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
+        android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
+        android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/castMovieTitleTextView"
         app:layout_constraintStart_toEndOf="@+id/castMovieTitleTextView"
@@ -34,8 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:textSize="12sp"
         android:text="@string/slash"
+        android:textColor="@color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/castMovieYearTextView"
         app:layout_constraintStart_toEndOf="@id/castMovieYearTextView"
         app:layout_constraintTop_toTopOf="@+id/castMovieTitleTextView" />
@@ -48,6 +51,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
+        android:textColor="@color/white"
         android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="@+id/castMovieYearTextView"
         app:layout_constraintEnd_toEndOf="parent"
