--- a/app/src/main/res/layout/fragment_saved_movies_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_saved_movies_recycler_view.xml
@@ -13,6 +13,7 @@
             android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/padding_8dp"
             android:text="@string/my_saved_movies"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
