--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,8 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="actionSearch"
-        android:background="@color/grey"
+        android:backgroundTint="@color/grey"
         android:elevation="8dp"
+        android:textColor="@color/white"
         app:queryHint="Search movie/TV show here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
