--- a/app/src/main/res/layout/item_actors_recycler_view.xml
+++ b/app/src/main/res/layout/item_actors_recycler_view.xml
@@ -5,9 +5,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/cardview_start"
-    app:cardUseCompatPadding="true"
+    android:backgroundTint="@color/background_dark"
     android:elevation="@dimen/cardview_elevation"
-    app:cardCornerRadius="@dimen/cardview_corner_radius">
+    app:cardCornerRadius="@dimen/cardview_corner_radius"
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -28,8 +29,9 @@
             android:id="@+id/actorNameTexView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_4dp"
             android:minLines="2"
+            android:padding="@dimen/padding_4dp"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,5 +39,4 @@
             app:layout_constraintTop_toBottomOf="@+id/actorFotoImageView"
             tools:text="Jodie Comer" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
