--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,6 @@
     <color name="grey">#0F000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_dark">#171414</color>
+    <color name="red_surface">#E50914</color>
+    <color name="bottom_nav_color">#0F000000</color>
 </resources>
