--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,13 +10,14 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/background_dark</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/background_dark</item>
     </style>
 
     <style name="StyleBottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
-        <item name="backgroundTint">@color/design_default_color_secondary</item>
+        <item name="backgroundTint">@color/bottom_nav_color</item>
         <item name="itemTextColor">@color/black</item>
-        <item name="android:windowBackground">@color/background</item>
+        <item name="android:windowBackground">@color/background_dark</item>
     </style>
 </resources>
