--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,4 +20,11 @@
         <item name="itemTextColor">@color/black</item>
         <item name="android:windowBackground">@color/background_dark</item>
     </style>
+
+    <style name="AppTheme.DarkSearchView">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="hintTextColor">@color/white</item>
+        <item name="android:editTextColor">@android:color/white</item>
+        <item name="android:textColorHint">@android:color/white</item>
+    </style>
 </resources>
