--- a/app/src/main/res/layout/fragment_main_movies_rv.xml
+++ b/app/src/main/res/layout/fragment_main_movies_rv.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/inTheatreCategoryLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
 
         <ProgressBar
             android:id="@+id/progressBar"
