--- a/app/src/main/res/layout/fragment_saved_movies_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_saved_movies_recycler_view.xml
@@ -21,7 +21,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/savedMovieListRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="@dimen/margin_8dp"
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:spanCount="3"
