--- a/app/src/main/res/layout/fragment_actor_info.xml
+++ b/app/src/main/res/layout/fragment_actor_info.xml
@@ -12,11 +12,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/actorPhotoImageView"
-            android:layout_width="150dp"
+            android:layout_width="140dp"
             android:layout_height="200dp"
             android:layout_margin="4dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
@@ -25,7 +25,8 @@
             android:id="@+id/actorNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
+            android:layout_marginBottom="@dimen/margin_8dp"
             android:text="@string/date_of_birth"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/actorPhotoImageView"
@@ -36,7 +37,7 @@
             android:id="@+id/actorProfessionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/actorPhotoImageView"
             app:layout_constraintTop_toBottomOf="@+id/actorNameTextView"
@@ -56,7 +57,7 @@
             android:id="@+id/actorsAwardsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/awards"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/actorPhotoImageView"
@@ -66,7 +67,7 @@
             android:id="@+id/actorHeightTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/height"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/actorPhotoImageView"
@@ -76,7 +77,8 @@
             android:id="@+id/actorBioTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:padding="@dimen/padding_8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,8 +89,8 @@
             android:id="@+id/viewAfterBio"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:layout_margin="4dp"
-            android:background="@color/grey"
+            android:layout_margin="@dimen/margin_4dp"
+            android:background="@color/bottom_nav_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actorBioTextView" />
 
@@ -96,7 +98,8 @@
             android:id="@+id/actorKnownForMoviesTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:padding="@dimen/padding_8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:text="@string/known_for_movies"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,29 +110,29 @@
             android:id="@+id/actorKnownForRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/shape_background_poster"
+            android:layout_marginBottom="@dimen/margin_8dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/actorKnownForMoviesTitleTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/actorKnownForMoviesTitleTextView"
+            tools:listitem="@layout/item_actor_known_for_recycler_view" />
 
         <View
             android:id="@+id/view"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:layout_margin="4dp"
-            android:background="@color/grey"
+            android:layout_margin="@dimen/margin_4dp"
+            android:background="@color/bottom_nav_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actorKnownForRecyclerView" />
 
         <TextView
             android:id="@+id/actorAllRolesTitleTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:padding="@dimen/padding_8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:text="@string/all_films_title"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,12 +142,20 @@
             android:id="@+id/actorCastMovieRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/shape_background_poster"
+            android:layout_margin="@dimen/margin_8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actorAllRolesTitleTextView"
             tools:listitem="@layout/item_actor_cast_movie_recycler_view" />
+
+        <ProgressBar
+            android:id="@+id/actorInfoProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
