--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -13,7 +13,8 @@
             android:id="@+id/saveToMyListImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_my_list"
+            android:backgroundTint="@color/background_dark"
+            android:src="@drawable/ic_add_to_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,9 +22,9 @@
             android:id="@+id/smallMoviePosterImageView"
             android:layout_width="100dp"
             android:layout_height="150dp"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:scaleType="fitCenter"
-            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/killing_eve_example" />
@@ -32,13 +33,13 @@
             android:id="@+id/movieRatingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:background="@drawable/rounded_shape"
             android:padding="@dimen/padding_4dp"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/titleInfoTextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/smallMoviePosterImageView"
+            app:layout_constraintStart_toStartOf="@+id/movieRunTimeLabelTextView"
+            app:layout_constraintTop_toBottomOf="@id/movieRunTimeLabelTextView"
             tools:backgroundTint="@color/black"
             tools:text="4.5" />
 
@@ -50,7 +51,7 @@
             app:layout_constraintGuide_percent="0.20" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
+            android:id="@+id/guidelineVertical30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -60,13 +61,13 @@
             android:id="@+id/titleInfoTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_title_info"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.125"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Killing Eve: Second Season" />
 
@@ -74,17 +75,17 @@
             android:id="@+id/dateOfReleaseInfoLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/released_date"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintTop_toBottomOf="@+id/titleInfoTextView" />
 
         <TextView
             android:id="@+id/dateOfReleaseInfoTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/dateOfReleaseInfoLabelTextView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,18 +97,17 @@
             android:id="@+id/movieGenresLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/genres"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseInfoLabelTextView" />
 
         <TextView
             android:id="@+id/movieGenresTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/movieGenresLabelTextView"
@@ -118,17 +118,17 @@
             android:id="@+id/movieDirectorLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/director"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintTop_toBottomOf="@+id/movieGenresTextView" />
 
         <TextView
             android:id="@+id/movieDirectorTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/movieDirectorLabelTextView"
@@ -139,17 +139,17 @@
             android:id="@+id/movieRunTimeLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/runtime"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintTop_toBottomOf="@+id/movieDirectorTextView" />
 
         <TextView
             android:id="@+id/movieRunTimeTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/movieRunTimeLabelTextView"
@@ -160,7 +160,7 @@
             android:id="@+id/movieOverviewTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/margin_side_overvie"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -186,7 +186,7 @@
             android:id="@+id/castTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/margin_8dp"
             android:text="@string/cast_title"
             android:textColor="@color/white"
@@ -200,14 +200,23 @@
             android:id="@+id/recyclerViewActors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/castTitleTextView"
+            app:layout_constraintTop_toBottomOf="@+id/viewAfterCast"
             tools:listitem="@layout/item_actors_recycler_view" />
+
+        <View
+            android:id="@+id/viewAfterCast"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="@color/bottom_nav_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/castTitleTextView"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
