--- a/app/src/main/res/layout/fragment_top250.xml
+++ b/app/src/main/res/layout/fragment_top250.xml
@@ -58,6 +58,15 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_movie_recycler_view" />
 
+        <ProgressBar
+            android:id="@+id/top250ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
